# CV-based-sudoku-solver

./: .gitignore  README.md  cv_sudoku_solver.py  pyproject.toml
notebook/: regional_proposal.ipynb
src/: regional_proposal.py  sudoku_translator.py
src/regional_proposal/: __init__.py  regional_proposal.py
src/sudoku/: sudoku.py
src/utils/: utils.py
