[tool.poetry]
name = "sudoku-generator-solver"
version = "0.1.0"
description = ""
authors = ["ZequnZ <zequn.zhou@n26.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
opencv-python = "^4.5.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
