[tool.poetry]
name = "sudoku-generator-solver"
version = "0.1.0"
description = ""
authors = ["ZequnZ <zequn.zhou007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.2"
opencv-python = "^4.5.1"
matplotlib = "^3.3.4"
tensorflow = "2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
